# Youtube_Player_For_Qt

./: CMakeLists.txt  CMakeLists.txt.user.8a4a196  README.md  extracter.cpp  extracter.h  itag.cpp  itag.h  main.cpp  play_list.qml  player.cpp  player.h  player_quick.qml  resource.qrc  search_page.qml  search_page.qrc  searchpage.cpp  searchpage.h  streamiodevice.cpp  streamiodevice.h  videoitem.cpp  videoitem.h  videoitem.ui  webcomwidget.cpp  webcomwidget.h  webcomwidget.ui
android/: AndroidManifest.xml  build.gradle
android/src/: MyActivity.java
